plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'online'
version = '0.0.1-SNAPSHOT'

repositories { mavenCentral() }

java {
	toolchain { languageVersion = JavaLanguageVersion.of(21) }
}
configurations {
	compileOnly { extendsFrom annotationProcessor }
}

apply from: "gradle/spring.gradle"
apply from: "gradle/db.gradle"
apply from: "gradle/lombok.gradle"
apply from: "gradle/test.gradle"
apply from: "gradle/swagger.gradle"
apply from: "gradle/kafka.gradle"